linked cat-codespace.png and alt codespace cat

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="">Contact</a></li>
     </ul>
 
-    <h2>About Me</h2>
+    <h2>About Me 🐱</h2>
+    <img src="cat-codespace.png" alt="CodeSpace Cat" width="300" />
 
 
 </body>
