updated about me section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <h2>About Me 🐱</h2>
     <img src="cat-codespace.png" alt="CodeSpace Cat" width="300" />
 
+    <p>Hello! I'm <b>CodeSpace Cat</b>. i'm purr-ssionate about web development and design. I've been pawing at the web industry for just one catnap (that's less than a day in human terms),and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experinces. Whoa that's a lot of puns.🐾 </p>
+
 
 </body>
 </html>
