added my skills section

--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
 <body>
     <h1>CodeSpace Cat's Portfolio 🎨</h1>
 
-    <ul>
-        <li><a href="">About Me</a></li>
-        <li><a href="">Skills</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contact</a></li>
-    </ul>
+            <ul>
+                <li><a href="">About Me</a></li>
+                <li><a href="">Skills</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
 
     <h2>About Me 🐱</h2>
     <img src="cat-codespace.png" alt="CodeSpace Cat" width="300" />
 
     <p>Hello! I'm <b>CodeSpace Cat</b>. i'm purr-ssionate about web development and design. I've been pawing at the web industry for just one catnap (that's less than a day in human terms),and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experinces. Whoa that's a lot of puns.🐾 </p>
+
+    <h2>My Skills</h2>
+            <ul>
+                <li>Web Development</li>
+                <li>UI/UX Design</li>
+                <li>Backend Development</li>
+                <li>Database Management</li>
+                <li>SEO Optimization</li>
+                <li>Lying in the Sun</li>
+            </ul>
 
 
 </body>
