added Catfolio and first part of table

--- a/index.html
+++ b/index.html
@@ -29,6 +29,25 @@
                 <li>Lying in the Sun</li>
             </ul>
 
+<h2>Catfolio</h2>
+
+<table>
+    <thead>
+        <tr>
+            <th>Project Name</th>
+            <th>Date</th>
+            <th>Description</th>
+            <th>Thumbnail</th>
+        </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Purrfect Landing Page</td>
+        <td>January 2024</td>
+        <td>A delightful landing page for a luxury cat condo.</td>
+        <td><img src="1.png" alt="Purrfect Landing Page" width="300"></td>
+      </tr>
+</table>
 
 </body>
 </html>
