added second part of table

--- a/index.html
+++ b/index.html
@@ -41,12 +41,18 @@
         </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Purrfect Landing Page</td>
-        <td>January 2024</td>
-        <td>A delightful landing page for a luxury cat condo.</td>
-        <td><img src="1.png" alt="Purrfect Landing Page" width="300"></td>
-      </tr>
+        <tr>
+            <td>Purrfect Landing Page</td>
+            <td>January 2024</td>
+            <td>A delightful landing page for a luxury cat condo.</td>
+            <td><img src="1.png" alt="Purrfect Landing Page" width="300"></td>
+        </tr>
+        <tr>
+            <td>kitty Commerce</td>
+            <td>February 2024</td>
+            <td>An online store selling the fanciest catup toys.</td>
+            <td><img src="2.png" alt="Whisker Widgets" width="300"></td>
+        </tr>
 </table>
 
 </body>
