added last part of table

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
             <td>An online store selling the fanciest catup toys.</td>
             <td><img src="2.png" alt="Whisker Widgets" width="300"></td>
         </tr>
+        <tr>
+            <td>CatChat Social</td>
+            <td>June 2024</td>
+            <td> A social media site for cats to meow and hiss!</td>
+            <td><img src="3.png" alt="Whisker Widgets" width="300"></td>
+        </tr>
 </table>
-
+ 
 </body>
 </html>
