--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
             <td><img src="3.png" alt="Whisker Widgets" width="300"></td>
         </tr>
 </table>
- 
+ <h2>Contact Me</h2>
+
+  <form action="#" method="post">
+    Name: <input type="text" name="name">
+    Email: <input type="email" name="email">
+    Message: <input type="text" name="message">
+    <input type="submit" value="Submit">
+  </form>
+
 </body>
 </html>
