--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     Message: <input type="text" name="message">
     <input type="submit" value="Submit">
   </form>
-
+  <p>© 2024 CodeSpace Cat. All rights reserved.</p>
 </body>
 </html>
