--- a/index.html
+++ b/index.html
@@ -2,34 +2,34 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>Cat's Portfolio</title>
 </head>
 <body>
     <h1>CodeSpace Cat's Portfolio 🎨</h1>
 
             <ul>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#myskills">Skills</a></li>
+                <li><a href="#catfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
 
-    <h2>About Me 🐱</h2>
+    <h2 id="aboutme">About Me 🐱</h2>
     <img src="cat-codespace.png" alt="CodeSpace Cat" width="300" />
 
     <p>Hello! I'm <b>CodeSpace Cat</b>. i'm purr-ssionate about web development and design. I've been pawing at the web industry for just one catnap (that's less than a day in human terms),and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experinces. Whoa that's a lot of puns.🐾 </p>
 
-    <h2>My Skills</h2>
+    <h2 id="myskills">My Skills🧑‍💻</h2>
             <ul>
-                <li>Web Development</li>
-                <li>UI/UX Design</li>
-                <li>Backend Development</li>
-                <li>Database Management</li>
-                <li>SEO Optimization</li>
-                <li>Lying in the Sun</li>
+                <li>Web Development🕸️</li>
+                <li>UI/UX Design🎨</li>
+                <li>Backend Development🧱</li>
+                <li>Database Management💻</li>
+                <li>SEO Optimization🔎</li>
+                <li>Lying in the Sun🌞</li>
             </ul>
 
-<h2>Catfolio</h2>
+<h2 id="catfolio">Catfolio</h2>
 
 <table>
     <thead>
@@ -60,7 +60,7 @@
             <td><img src="3.png" alt="Whisker Widgets" width="300"></td>
         </tr>
 </table>
- <h2>Contact Me</h2>
+ <h2 id="contact">Contact Me</h2>
 
   <form action="#" method="post">
     Name: <input type="text" name="name">
