--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 </head>
 <body>
     <h1>CodeSpace Cat's Portfolio 🎨</h1>
-
+    <nav>
             <ul>
                 <li><a href="#aboutme">About Me</a></li>
                 <li><a href="#myskills">Skills</a></li>
                 <li><a href="#catfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+    </nav>       
 
     <h2 id="aboutme">About Me 🐱</h2>
     <img src="cat-codespace.png" alt="CodeSpace Cat" width="300" />
