--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <td>kitty Commerce</td>
             <td>February 2024</td>
             <td>An online store selling the fanciest catup toys.</td>
-            <td><img src="2.png" alt="Whisker Widgets" width="300"></td>
+            <td><img src="2.png" alt="kitty Commerce" width="300"></td>
         </tr>
         <tr>
             <td>CatChat Social</td>
             <td>June 2024</td>
             <td> A social media site for cats to meow and hiss!</td>
-            <td><img src="3.png" alt="Whisker Widgets" width="300"></td>
+            <td><img src="3.png" alt="CatChat Social" width="300"></td>
         </tr>
 </table>
  <h2 id="contact">Contact Me</h2>
