added images folder and fixed images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </nav>       
 
     <h2 id="aboutme">About Me 🐱</h2>
-    <img src="cat-codespace.png" alt="CodeSpace Cat" width="300" />
+    <img src="image/cat-codespace.png" alt="CodeSpace Cat" width="300" />
 
     <p>Hello! I'm <b>CodeSpace Cat</b>. i'm purr-ssionate about web development and design. I've been pawing at the web industry for just one catnap (that's less than a day in human terms),and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experinces. Whoa that's a lot of puns.🐾 </p>
 
@@ -46,19 +46,19 @@
             <td>Purrfect Landing Page</td>
             <td>January 2024</td>
             <td>A delightful landing page for a luxury cat condo.</td>
-            <td><img src="1.png" alt="Purrfect Landing Page" width="300"></td>
+            <td><img src="image/1.png" alt="Purrfect Landing Page" width="300"></td>
         </tr>
         <tr>
             <td>kitty Commerce</td>
             <td>February 2024</td>
             <td>An online store selling the fanciest catup toys.</td>
-            <td><img src="2.png" alt="kitty Commerce" width="300"></td>
+            <td><img src="image/2.png" alt="kitty Commerce" width="300"></td>
         </tr>
         <tr>
             <td>CatChat Social</td>
             <td>June 2024</td>
             <td> A social media site for cats to meow and hiss!</td>
-            <td><img src="3.png" alt="CatChat Social" width="300"></td>
+            <td><img src="image/3.png" alt="CatChat Social" width="300"></td>
         </tr>
 </table>
  <h2 id="contact">Contact Me</h2>
