added sections and fixed navigation

--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
     </nav>       
-
-    <h2 id="aboutme">About Me 🐱</h2>
+<section id="aboutme">
+    <h2>About Me 🐱</h2>
     <img src="image/cat-codespace.png" alt="CodeSpace Cat" width="300" />
 
     <p>Hello! I'm <b>CodeSpace Cat</b>. i'm purr-ssionate about web development and design. I've been pawing at the web industry for just one catnap (that's less than a day in human terms),and I adore crafting pawsitively intuitive, whisker-twitching, and fur-tastic web experinces. Whoa that's a lot of puns.🐾 </p>
+</section>
 
-    <h2 id="myskills">My Skills🧑‍💻</h2>
+<section id="myskills">
+    <h2>My Skills🧑‍💻</h2>
             <ul>
                 <li>Web Development🕸️</li>
                 <li>UI/UX Design🎨</li>
@@ -29,46 +31,52 @@
                 <li>SEO Optimization🔎</li>
                 <li>Lying in the Sun🌞</li>
             </ul>
+</section>
 
-<h2 id="catfolio">Catfolio</h2>
+<section id="catfolio">
+    <h2>Catfolio</h2>
 
-<table>
-    <thead>
-        <tr>
-            <th>Project Name</th>
-            <th>Date</th>
-            <th>Description</th>
-            <th>Thumbnail</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Purrfect Landing Page</td>
-            <td>January 2024</td>
-            <td>A delightful landing page for a luxury cat condo.</td>
-            <td><img src="image/1.png" alt="Purrfect Landing Page" width="300"></td>
-        </tr>
-        <tr>
-            <td>kitty Commerce</td>
-            <td>February 2024</td>
-            <td>An online store selling the fanciest catup toys.</td>
-            <td><img src="image/2.png" alt="kitty Commerce" width="300"></td>
-        </tr>
-        <tr>
-            <td>CatChat Social</td>
-            <td>June 2024</td>
-            <td> A social media site for cats to meow and hiss!</td>
-            <td><img src="image/3.png" alt="CatChat Social" width="300"></td>
-        </tr>
-</table>
- <h2 id="contact">Contact Me</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Date</th>
+                <th>Description</th>
+                <th>Thumbnail</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Purrfect Landing Page</td>
+                <td>January 2024</td>
+                <td>A delightful landing page for a luxury cat condo.</td>
+                <td><img src="image/1.png" alt="Purrfect Landing Page" width="300"></td>
+            </tr>
+            <tr>
+                <td>kitty Commerce</td>
+                <td>February 2024</td>
+                <td>An online store selling the fanciest catup toys.</td>
+                <td><img src="image/2.png" alt="kitty Commerce" width="300"></td>
+            </tr>
+            <tr>
+                <td>CatChat Social</td>
+                <td>June 2024</td>
+                <td> A social media site for cats to meow and hiss!</td>
+                <td><img src="image/3.png" alt="CatChat Social" width="300"></td>
+            </tr>
+    </table>
+</section>
 
-  <form action="#" method="post">
-    Name: <input type="text" name="name">
-    Email: <input type="email" name="email">
-    Message: <input type="text" name="message">
-    <input type="submit" value="Submit">
-  </form>
+<section id="contact">
+    <h2>Contact Me</h2>
+
+    <form action="#" method="post">
+        Name: <input type="text" name="name">
+        Email: <input type="email" name="email">
+        Message: <input type="text" name="message">
+        <input type="submit" value="Submit">
+    </form>
+</section>
   <p>© 2024 CodeSpace Cat. All rights reserved.</p>
 </body>
 </html>
